# Synthator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Version.hpp.in
.github/workflows/: build.yml
Source/: CMakeLists.txt  Editor.cpp  Editor.hpp  EditorColours.hpp  EditorLookAndFeel.cpp  EditorLookAndFeel.hpp  FormulaButton.hpp  Knob.cpp  Knob.hpp  Oscillator.cpp  Oscillator.hpp  OscillatorComponent.cpp  OscillatorComponent.hpp  Params.cpp  Params.hpp  SynthProcessor.cpp  SynthProcessor.hpp  SynthSound.cpp  SynthSound.hpp  SynthVoice.cpp  SynthVoice.hpp
